--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,10 @@ dependencies {
     implementation 'com.github.Mahfa:DayNightSwitch:1.2'
     implementation 'com.baoyz.swipemenulistview:library:1.3.0'
     implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.jakewharton:butterknife:8.4.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+    implementation 'com.android.support:loader:28.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
 }
