--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,33 +13,45 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-
-        android:networkSecurityConfig="@xml/network_security_config"
-
         android:theme="@style/AppTheme">
-        <activity android:name=".Main2Activity"
-            android:hardwareAccelerated="true"></activity>
+
+        <activity android:name=".LoginActivity"></activity>
+        <activity
+            android:name=".Main2Activity"
+            android:hardwareAccelerated="true" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
-        <activity
-            android:name=".AddPostActivity">
-
-        </activity>
-        <activity
-            android:name=".CommentActivity"
-            android:label="@string/comment" />
-        <activity
-            android:name=".PostActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".AddPostActivity"></activity>
+        <activity
+            android:name=".CommentActivity"
+            android:label="@string/comment" />
+        <activity android:name=".PostActivity">
+
+        </activity>
+
+        <meta-data android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id"/>
+        <activity android:name="com.facebook.FacebookActivity"
+            android:configChanges= "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name" />
+        <activity android:name="com.facebook.CustomTabActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="@string/fb_login_protocol_scheme" />
+            </intent-filter>
+        </activity>
+
     </application>
 
 </manifest>
