post with idUser

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:roundIcon="@mipmap/ic_icon_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Loading"
+        <activity android:name=".LoadingActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,7 +27,7 @@
         </activity>
         <activity android:name=".LoginActivity" />
         <activity
-            android:name=".Main2Activity"
+            android:name=".WebViewActivity"
             android:hardwareAccelerated="true" />
         <activity
             android:name=".MainActivity"
