--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 
     //dexter permissions
     implementation "com.karumi:dexter:5.0.0"
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
